last tweaks and optimized imports