@@ -1,107 +1,104 @@
-
 package net.foxyas.changedaddon.item;
 
-import net.minecraftforge.registries.ForgeRegistries;
-import net.minecraftforge.client.IItemRenderProperties;
-
-import net.minecraft.world.level.Level;
-import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.item.ArmorMaterial;
-import net.minecraft.world.item.ArmorItem;
-import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.EquipmentSlot;
-import net.minecraft.world.entity.Entity;
-import net.minecraft.sounds.SoundEvent;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.client.model.geom.ModelPart;
-import net.minecraft.client.model.HumanoidModel;
-import net.minecraft.client.Minecraft;
-
-import net.foxyas.changedaddon.procedures.LunarRoseProcedure;
-import net.foxyas.changedaddon.init.ChangedAddonTabs;
 import net.foxyas.changedaddon.client.model.ModelNewHyperFlower;
+import net.foxyas.changedaddon.init.ChangedAddonTabs;
+import net.foxyas.changedaddon.procedures.LunarRoseProcedure;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.model.HumanoidModel;
+import net.minecraft.client.model.geom.ModelPart;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.sounds.SoundEvent;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.ArmorItem;
+import net.minecraft.world.item.ArmorMaterial;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.Ingredient;
+import net.minecraft.world.level.Level;
+import net.minecraftforge.client.IItemRenderProperties;
+import net.minecraftforge.registries.ForgeRegistries;
 
-import java.util.Map;
 import java.util.Collections;
+import java.util.Map;
 
 public abstract class LunarroseItem extends ArmorItem {
-	public LunarroseItem(EquipmentSlot slot, Item.Properties properties) {
-		super(new ArmorMaterial() {
-			@Override
-			public int getDurabilityForSlot(EquipmentSlot slot) {
-				return new int[]{13, 15, 16, 11}[slot.getIndex()] * 100;
-			}
+    public LunarroseItem(EquipmentSlot slot, Item.Properties properties) {
+        super(new ArmorMaterial() {
+            @Override
+            public int getDurabilityForSlot(EquipmentSlot slot) {
+                return new int[]{13, 15, 16, 11}[slot.getIndex()] * 100;
+            }
 
-			@Override
-			public int getDefenseForSlot(EquipmentSlot slot) {
-				return new int[]{0, 0, 0, 0}[slot.getIndex()];
-			}
+            @Override
+            public int getDefenseForSlot(EquipmentSlot slot) {
+                return new int[]{0, 0, 0, 0}[slot.getIndex()];
+            }
 
-			@Override
-			public int getEnchantmentValue() {
-				return 100;
-			}
+            @Override
+            public int getEnchantmentValue() {
+                return 100;
+            }
 
-			@Override
-			public SoundEvent getEquipSound() {
-				return ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation(""));
-			}
+            @Override
+            public SoundEvent getEquipSound() {
+                return ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation(""));
+            }
 
-			@Override
-			public Ingredient getRepairIngredient() {
-				return Ingredient.of();
-			}
+            @Override
+            public Ingredient getRepairIngredient() {
+                return Ingredient.of();
+            }
 
-			@Override
-			public String getName() {
-				return "lunarrose";
-			}
+            @Override
+            public String getName() {
+                return "lunarrose";
+            }
 
-			@Override
-			public float getToughness() {
-				return 0f;
-			}
+            @Override
+            public float getToughness() {
+                return 0f;
+            }
 
-			@Override
-			public float getKnockbackResistance() {
-				return 0f;
-			}
-		}, slot, properties);
-	}
+            @Override
+            public float getKnockbackResistance() {
+                return 0f;
+            }
+        }, slot, properties);
+    }
 
-	public static class Helmet extends LunarroseItem {
-		public Helmet() {
-			super(EquipmentSlot.HEAD, new Item.Properties().tab(ChangedAddonTabs.TAB_CHANGED_ADDON).fireResistant());
-		}
+    public static class Helmet extends LunarroseItem {
+        public Helmet() {
+            super(EquipmentSlot.HEAD, new Item.Properties().tab(ChangedAddonTabs.TAB_CHANGED_ADDON).fireResistant());
+        }
 
-		public void initializeClient(java.util.function.Consumer<net.minecraftforge.client.IItemRenderProperties> consumer) {
-			consumer.accept(new IItemRenderProperties() {
-				@Override
-				public HumanoidModel getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("head", new ModelNewHyperFlower(Minecraft.getInstance().getEntityModels().bakeLayer(ModelNewHyperFlower.LAYER_LOCATION)).HyperFlowerModel, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm",
-									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
-									new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
-					armorModel.crouching = living.isShiftKeyDown();
-					armorModel.riding = defaultModel.riding;
-					armorModel.young = living.isBaby();
-					return armorModel;
-				}
-			});
-		}
+        public void initializeClient(java.util.function.Consumer<net.minecraftforge.client.IItemRenderProperties> consumer) {
+            consumer.accept(new IItemRenderProperties() {
+                @Override
+                public HumanoidModel getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+                    HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+                            Map.of("head", new ModelNewHyperFlower(Minecraft.getInstance().getEntityModels().bakeLayer(ModelNewHyperFlower.LAYER_LOCATION)).HyperFlowerModel, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                                    "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm",
+                                    new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
+                                    new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+                    armorModel.crouching = living.isShiftKeyDown();
+                    armorModel.riding = defaultModel.riding;
+                    armorModel.young = living.isBaby();
+                    return armorModel;
+                }
+            });
+        }
 
-		@Override
-		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "changed_addon:textures/entities/new_moon_rose.png";
-		}
+        @Override
+        public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
+            return "changed_addon:textures/entities/new_moon_rose.png";
+        }
 
-		@Override
-		public void onArmorTick(ItemStack itemstack, Level world, Player entity) {
-			LunarRoseProcedure.execute(world, entity, itemstack);
-		}
-	}
+        @Override
+        public void onArmorTick(ItemStack itemstack, Level world, Player entity) {
+            LunarRoseProcedure.execute(world, entity, itemstack);
+        }
+    }
 }
